Fixed bug where when zooming in the image would become bigger due to the space left behind by the original position of the image carousel buttons

--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -4,6 +4,7 @@
 }
 
 .itemContainer{
+  
   max-width: 1000px;
   align-self: center;
   display: grid;
@@ -15,35 +16,51 @@
 }
 .itemPicturesContainer{
   
-  grid-column: 1/2;
+  display: flex;
+  justify-content: center;
   
+  grid-column: 1/2;
   height: 500px;
   width: 300px;
-  border-radius: 10px;
-  overflow:hidden;
+  
   margin: 0 auto;
+  overflow:hidden;
+  border-radius: 10px;
+  font-size: 0;
 }
 
 .itemPicture{
+ 
   
-  
-  max-height: 500px;
-  max-width: 300px;
+  height: 100%;
+  width: 100%;
   z-index: 1;
+  top: 0%;
+ 
+  
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
   
 }
 
 
+
+
 .containerArrow{
+  position: absolute;
+  margin-top: 0;
+  width: 300px;
   display: flex;
   justify-content: space-between;
   z-index: 2;
-  position: relative;
-  top: 50%;
+  top: 40%;
+  transform: translateY(-50%);
+  
 
 }
 .leftArrow, .rightArrow{
+  align-self: flex-start;
+  height: 20px;
+  width: 20px;
   border: none;
   background-color: bisque;
   
@@ -56,12 +73,13 @@
 
 
 .dotContainer{
+  position: absolute;
   display: flex;
   justify-content: center;
   column-gap: 10px;
-  position: relative;
   
-  top:85%;
+  
+  top:60%;
   z-index: 2;
 
   
